Add README.md with info on installation, fix various comments in TS2

--- a/Resources/Private/Templates/TypoScriptObjects/CategoryDetail.html
+++ b/Resources/Private/Templates/TypoScriptObjects/CategoryDetail.html
@@ -9,12 +9,13 @@
     <div{attributes -> f:format.raw()}>
 
     <!-- Category Name -->
+    <h1>{title -> f:format.raw()}</h1>
     <h1><neos:contentElement.editable property="title" /></h1>
 
     <!-- Main Content from content collection - created by the editor with elements needed like images, videos, etc. -->
         <f:format.raw value="{main}" />
 
-        <!-- Author news -->
+        <!-- Category news -->
         <f:if condition="{nods}">
             <p>Related news:<br />
                 <f:for each="{nods}" as="relnews">
